GNOME Font Viewer - 42.alpha
-------------------------------------------------------------------------------
Fonts 42.alpha comes with the following translation updates:
 - Basque
 - Bulgarian
 - Croatian
 - Friulian
 - Galician
 - Icelandic
 - Indonesian
 - Persian
 - Portuguese
 - Slovak
 - Spanish
 - Ukrainian

GNOME Font Viewer - 41.0
-------------------------------------------------------------------------------
Fonts 41 comes with the following translation updates:
 - Catalan
 - Chinese (China)
 - Friulian
 - Hebrew
 - Occitan
 - Russian

GNOME Font Viewer - 40.0
-------------------------------------------------------------------------------
Fonts 40 comes with a slight visual refresh, sporting
rounded bottom window corners. In addition there have
been general bug fixes and improvements.

* The About dialog now provides a link to the repository (jridehalgh)
* Startup should be faster now that we use font-config's APIs directly (Evan Welsh)

* Translation updates:
 - Basque
 - Catalan
 - Chinese (China)
 - Chinese (Taiwan)
 - Danish
 - Dutch
 - Friulian
 - Galician
 - Greek, Modern (1453-)
 - Japanese
 - Kazakh
 - Kurdish, Central
 - Malay
 - Panjabi
 - Persian
 - Portuguese
 - Portuguese (Brazil)
 - Slovak
 - Ukrainian

GNOME Font Viewer - 3.34.0
-------------------------------------------------------------------------------
• Translation updates

GNOME Font Viewer - 3.33.90
-------------------------------------------------------------------------------
• Fix compiler warning [!9, Kalev Lember]
• Translation updates

GNOME Font Viewer - 3.33.4
-------------------------------------------------------------------------------
• Add a keyboard shortcut to go Back [#9, James Westman]
• Improve appdata file [#6]
• Fix font installation when filenames would collide [#10, #11]
• Display an error dialog when installation fails [#20]
• Improve compatibility for fonts with non-unicode charmaps [#769247]
• Fix thumbnailing for font collection files [#788149]