@@ -37,6 +37,19 @@
   </kudos>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="42.beta" date="2022-02-12">
+      <description>
+        <p>Fonts 42.beta comes with a port to GTK4 by Evan Welsh, and the following translation updates:</p>
+        <ul>
+          <li>Chinese (China)</li>
+          <li>Czech</li>
+          <li>Occitan (post 1500)</li>
+          <li>Portuguese (Brazil)</li>
+          <li>Russian</li>
+          <li>Slovenian</li>
+        </ul>
+      </description>
+    </release>
     <release version="42.alpha" date="2022-01-11">
       <description>
         <p>Fonts 42.alpha comes with the following translation updates:</p>
