@@ -1,3 +1,14 @@
+GNOME Font Viewer - 42.beta
+-------------------------------------------------------------------------------
+Fonts 42.beta comes with a port to GTK4 by Evan Welsh,
+and the following translation updates:
+ - Chinese (China)
+ - Czech
+ - Occitan (post 1500)
+ - Portuguese (Brazil)
+ - Russian
+ - Slovenian
+
 GNOME Font Viewer - 42.alpha
 -------------------------------------------------------------------------------
 Fonts 42.alpha comes with the following translation updates:
